tests/snapshots/render__cast-target-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 0┌ Spirit Sign "Status Report" ──────────┐      │"
"│                       ││line 0│ On whom?                              │      │"
"│                       ││line 0│   everyone                            │      │"
"│                       ││line 0│ › everyone who needs you              │      │"
"│                       ││line 1│   everyone resting                    │      │"
"│                       ││line 1│   1 ○ Reimu        ~/dev/gensokyo     │      │"
"│                       ││line 1│   2 ○ Marisa       ~/dev/scratch_repo │      │"
"│                       ││line 1│ [cast ⏎] [cancel esc]                 │      │"
"│                       ││line 1└───────────────────────────────────────┘      │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
