tests/snapshots/render__departed-120x40.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 3 Cirno · ~/tmp ────────────────────────────────────────────────────────────────────────────┐"
"│1 ○ Reimu              ││                                                                                             │"
"│2 ○ Marisa             ││                                                                                             │"
"│3 · Cirno              ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                  Cirno has left the shrine                                  │"
"│                       ││                                                                                             │"
"│                       ││                                  [ recall r ] [ close x ]                                   │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│                       ││                                                                                             │"
"│[summon n] [cast c]    ││                                                                                             │"
"│[banish b] [recall r]  ││                                                                                             │"
"│[timetable t] [quit q] ││                                                                                             │"
"│[?]                    ││                                                                                             │"
"│[mouse: shrine m]      ││                                                                                             │"
"└──── ^] then a key ────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘"
