tests/snapshots/render__departed-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 3 Cirno · ~/tmp ────────────────────────────────────┐"
"│1 ○ Reimu              ││                                                     │"
"│2 ○ Marisa             ││                                                     │"
"│3 · Cirno              ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││              Cirno has left the shrine              │"
"│                       ││                                                     │"
"│                       ││              [ recall r ] [ close x ]               │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│[summon n] [banish b]  ││                                                     │"
"│[recall r] [quit q] [?]││                                                     │"
"│[mouse: shrine m]      ││                                                     │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
