tests/snapshots/render__empty-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ the shrine is empty ────────────────────────────────┐"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││                                                     │"
"│                       ││    ╘══════════════════════════════════════════════╛ │"
"│                       ││        ╰───────╤──────────────────────╤───────╯     │"
"│                       ││                ║    ┌────────────┐    ║             │"
"│                       ││                ║    │  幻 想 郷  │    ║             │" Hidden by multi-width symbols: [(51, " "), (54, " "), (57, " ")]
"│                       ││           ═════╬════╧════════════╧════╬═════        │"
"│                       ││                ║                      ║             │"
"│                       ││                ║       gensokyo       ║             │"
"│                       ││                ║                      ║             │"
"│                       ││               ╱╨╲                    ╱╨╲            │"
"│                       ││                                                     │"
"│                       ││                     [summon n]                      │"
"│                       ││                                                     │"
"│[summon n] [cast c]    ││                                                     │"
"│[banish b] [recall r]  ││                                                     │"
"│[timetable t] [quit q] ││                                                     │"
"│[?]                    ││                                                     │"
"│[mouse: shrine m]      ││                                                     │"
"└──── ^] then a key ────┘└─────────────────────────────────────────────────────┘"
