tests/snapshots/render__help.snap
---
source: tests/render.rs
expression: modal_box(&m).backend()
---
"┌ help ────────────────────────────────────────────────────────┐"
"│ Ctrl-] then a key:                                           │"
"│     n  summon          c  cast                               │"
"│     b  banish          r  recall                             │"
"│     t  timetable       x  close                              │"
"│     u  renew           j  next                               │"
"│     k  previous        a  needs you                          │"
"│     [  scroll          /  search                             │"
"│     y  copy last     1-9  slot                               │"
"│     m  mouse           w  awake                              │"
"│     d  detach          q  quit                               │"
"│     h  history         ?  help                               │"
"│    ^]  send ^]                                               │"
"│ Nobody on screen, or a departed one: the keys alone.         │"
"│ Scrolled back: j k a row, b f a screen, g the top, q home.   │"
"│ Search: / back, ? on, then n more the same way, N the other. │"
"│ Drag to copy, past an edge to scroll; double-click a word.   │"
"│ y copies the last answer of the resident on screen.          │"
"│ ● busy  ✦ needs you  ✧ asked you  ○ resting  · departed      │"
"│ ⇡ behind the installed claude (u renews)  ↻ renewing         │"
"│ [close esc]                                                  │"
"└──────────────────────────────────────────────────────────────┘"
